@@ -1,7 +1,5 @@
-DIST freeciv-2.1.8.tar.bz2 29640362 RMD160 77c49538c9c456efac04959b57c95f2cc28a8a73 SHA1 6f532dbbb68e6ae3d126d867db5c8a8b6c1eacee SHA256 73079de7d671b418c7d6916a4a1cb784b81d3eb845e49400a458eaaad698f20b
 DIST freeciv-2.1.9.tar.bz2 29732845 RMD160 cbe12facbbf00a85410e1324eb6ba3f2351ea1f1 SHA1 01a3500a9d0f9d9c9b95b7c4b57f2446f671a900 SHA256 42ed80ced681f14d3e7a40bcf754bc1d4392d722e49173961829a68cc74baf38
 DIST stdsounds3.tar.gz 118278 RMD160 46bb5fef4b2d3acf9959b3228c962bdf6591ea09 SHA1 103d02a0702687fb038f5187a321f8074b4ebfb5 SHA256 a3cc2be93c006c3a9492349aa4552bf059e45efc94135f09241877c221ae1bfa
-EBUILD freeciv-2.1.8.ebuild 5237 RMD160 9af291a91256cc720b1861904aa44112781cbaef SHA1 d0a5223728343708d57580d585b1d061aeb1bb8d SHA256 bb94ca4ea4b35369e60fff809de935dac9a3ac4d0c2ab152e27d1cd8999965dc
-EBUILD freeciv-2.1.9.ebuild 5176 RMD160 afe451cdbdcf26b091bb18dc0989b6ff5b5b3f1c SHA1 9aefaceec35015bd4f5d346d46b374861b89bdba SHA256 2aafc8a05237dfaf8763a53e30c01e1dbda9953df466a480a5ae66a6a6b90863
-MISC ChangeLog 13474 RMD160 f17a4e22d1c34edf4761b8b694e9f424cc6e0029 SHA1 4f98977651f2760b75a246f11971d0a73f0b5b1b SHA256 255f5321610dbf450133f3b973da79fbe0d4c6343f3d85e4141334690a948cc2
+EBUILD freeciv-2.1.9.ebuild 5019 RMD160 3af49afcba3b9b6d2e5ad37dd645013db668081e SHA1 e900458ea64997a2c9f00e6a41d98d802b3d6d41 SHA256 c77099627d11c6ad1c5204a19017f995a013182390c615ebe5563984bb72a308
+MISC ChangeLog 13693 RMD160 ebf7e5e0840e3c1ab9e57098c24d8b8900f1bd67 SHA1 65a70c9173a7c757b804bff46c6581ba2a3f3d79 SHA256 2139dc03fe0de0cae3da63bd5c16363a907f7123661b600aef6056699476e20f
 MISC metadata.xml 236 RMD160 da6a85d843183d3823ae8bcaf92cfd5bf61cc098 SHA1 ad6c23aa83441de75d14971aad4b6db5033a57e5 SHA256 c82561dfd15956bdf1e990623e951b31932fc782bdca7d94ea91dae35d88116d
