@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/freeciv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.92 2009/05/20 16:56:08 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.94 2009/06/02 17:21:06 mr_bones_ Exp $
+
+  02 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org> freeciv-2.1.9.ebuild:
+  esound is going away
+
+  31 May 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.9.ebuild:
+  Marking freeciv-2.1.9 ppc64 for bug 268536
 
   20 May 2009; nixnut <nixnut@gentoo.org> freeciv-2.1.9.ebuild:
   ppc stable #268536
